# epstein-vector

./: .gitignore  Dockerfile  Dockerfile.ingest  README.md  docker-compose.yml  pyproject.toml  watch-ingest.sh
.github/workflows/: deploy-web.yml  deploy.yml
api/: db.py  ingest.py  ingest_db.py  main.py  search.py
client/: chunk.py  download.py  embed.py  ingest.py  ingest_chunks.py  ingest_docs.py  ingest_remote.py
server/: service.py
server/models/: bge.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: api-key-input.tsx  dataset-filter.tsx  exclude-exact-toggle.tsx  fuzzy-result-card.tsx  search-bar.tsx  search-mode-toggle.tsx  search-results.tsx  starfield.tsx  text-result-card.tsx  vector-result-card.tsx
web/src/hooks/: use-search.ts
web/src/lib/: api.ts  types.ts  utils.ts
