[project]
name = "epstein-vector"
version = "0.1.0"
description = "Semantic search over DOJ Epstein Library documents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
    "bentoml>=1.2",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
client = [
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "langchain-text-splitters>=0.2",
    "tqdm>=4.66",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
include = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
